# orgonic

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
assets/: explosion.ron  fire.ron  flame-core.ron  flame-fire.ron
src/: camera.rs  ert.rs  main.rs
src/ert/: flame_ert.rs  glacial_ert.rs
